# efficient-network

./: README.md  pyproject.toml
efficient_network/: EfficientNetwork.py  EfficientNetworkClassifier.py  EfficientNetworkConfig.py  EfficientNetworkEncoder.py  EfficientNetworkPool.py  __init__.py
efficient_network/modules/: ConvolutionalModule.py  EfficientModule.py  FusedMIBModule.py  MIBModule.py  StochasticDepthModule.py
karamad/: EfficientNet.py  EfficientNetwork.py  EfficientNetworkClassifier.py  EfficientNetworkEncoder.py  EfficientNetworkPool.py
karamad/modules/: ConvolutionalBlock.py  ConvolutionalModule.py  FusedMobileInvertedBottleneckModule.py  SqueezeExcitationModule.py  __init__.py
