[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "efficient-network"
version = "0.0.01"
authors = [
  { name="Taha Shieenavaz", email="tahashieenavaz@gmail.com" },
]
description = "PyTorch implementation of EfficientNet: Rethinking Model Scaling for Convolutional Neural Networks by Mingxing Tan and Quoc V. Le."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["torch"]
keywords = ["image classification", "deep learning", "efficient networks", "efficient", "image"]
license = { file = "LICENSE" }
urls = { Homepage="https://github.com/tahashieenavaz/efficient_network", Repository="https://github.com/tahashieenavaz/efficient_network", Documentation="https://github.com/tahashieenavaz/efficient_network#readme" }

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "docs*", "figures*", "mermaid*", "scripts*"]

[tool.setuptools.package-data]
efficient_network = ["*.md", "*.txt", "*.png"]
